--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-cors-headers==4.3.1
 channels==4.0.0
 channels-redis==4.2.0
 django-filter==23.5
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.18
 gunicorn==21.2.0
 dj-database-url==2.1.0
 python-dotenv==1.0.0
